# Fitness-Progress-Tracker

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust-ci.yml
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/api/: auth.rs  docs.rs  middleware.rs  mod.rs  user.rs  workout.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: mod.rs  user.rs  workout.rs
src/services/: mod.rs  user_service.rs  workout_service.rs
src/utils/: auth.rs  mod.rs  tests.rs
tests/: api_tests.rs
