[package]
name = "fitness-progress-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Aniket Ghode"]
description = "Backend API for Fitness Progress Tracker mobile app"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-rt = "2.9.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15.0"

# Authentication
jsonwebtoken = "9.1.0"
bcrypt = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

# Logging
env_logger = "0.10.0"
log = "0.4.20"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13.3"

# Swagger/OpenAPI
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }

[dev-dependencies]
# Testing
tokio = { version = "1.32.0", features = ["full"] }
